tests/errors/scope_shadowing.orus
// Variable shadowing across scopes
fn main() {
    let x: i64 = 5
    if true {
        let x_inner: i64 = 10
        print(x_inner)
    }
    print(x)
    print(x_inner)
}